# lgtui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: install.sh  install_deps.sh  launch_game.sh  uninstall.sh
src/: app.rs  database.rs  game.rs  installer.rs  main.rs  onboarding.rs  prefix.rs  process.rs  runner.rs  ui.rs
