[package]
name = "lgtui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12.7", features = ["json", "stream", "rustls-tls"], default-features = false }
flate2 = "1.0"
tar = "0.4"
toml = "0.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
